--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "koa": "^2.14.2",
+    "koa-body": "^6.0.1",
     "koa-router": "^12.0.0",
+    "nodemon": "^3.0.1"
+  },
+  "devDependencies": {
     "nodemon": "^3.0.1"
   }
 }
