--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "jsonwebtoken": "^9.0.1",
     "koa": "^2.14.2",
     "koa-body": "^6.0.1",
+    "koa-parameter": "^3.0.1",
     "koa-router": "^12.0.0",
+    "koa-static": "^5.0.0",
     "mysql2": "^3.6.0",
     "nodemon": "^3.0.1",
     "sequelize": "^6.32.1"
